CustomObjects/objects/invoiceit_s__Quote__c.object
<CustomObject>
    <customHelpPage>invoiceit_s__support</customHelpPage>
    <description>A Quote is a document that a vendor or service provider would give to a customer to describe specific goods and services that they may provide and its cost</description>
    <fields>
        <fullName>invoiceit_s__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Select the Account for that Quote</description>
        <inlineHelpText>This field will provide the Account for Quote</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quote</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is loop up to Contact for Billing Contact</description>
        <inlineHelpText>This is the Contact to which the Quote is sent by email</inlineHelpText>
        <label>Billing Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.invoiceit_s__Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.invoiceit_s__Partner__c</valueField>
            </filterItems>
            <infoMessage>You can pick a contact that belongs to the selected Account or Partner. This can be overridden.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quote</relationshipLabel>
        <relationshipName>Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Contracted_MRR__c</fullName>
        <description>TCV / Terms(In Months)</description>
        <inlineHelpText>&quot;This is the contracted Monthly Recurring RevenueCalculated 
as TCV / Terms(Months)&quot;</inlineHelpText>
        <label>Contracted MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Create_Automatic_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is true then it will create the Order from the Quote trigger.</description>
        <inlineHelpText>If User enable the check box, the Order will be created automatically from Quote</inlineHelpText>
        <label>Create Automatic Order?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__CurrencyL__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Based on the Currency the Products will be generated</description>
        <inlineHelpText>This Currency field is used in price displays for products to generate a Order from Quote</inlineHelpText>
        <label>Currency</label>
        <referenceTo>invoiceit_s__Currency__c</referenceTo>
        <relationshipLabel>Quote</relationshipLabel>
        <relationshipName>Quote</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Discount_Code__c</fullName>
        <description>The Discount Code will be applied to all the charges</description>
        <inlineHelpText>This Code is used to allocate predetermined Discount for all the charges</inlineHelpText>
        <label>Discount Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Discount_Percent__c</fullName>
        <description>The Discount Percent will be applied to all the charges</description>
        <inlineHelpText>This Percent is used to allocate predetermined Discount for charges</inlineHelpText>
        <label>Discount Percent</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Discount_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Discount offered on this Quote</description>
        <inlineHelpText>Discount offered on this Quote</inlineHelpText>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it is checked that means an Email has been sent to the customer.</description>
        <inlineHelpText>This field is used for indicating Email to customer when the Quote is generated</inlineHelpText>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Exchange_Rate_Applied__c</fullName>
        <description>Exchange Rate Applied</description>
        <inlineHelpText>If you are a multi currency org, this field will hold the exchange rate between the Quote Currency and your Corporate Currency. 
Value in Corporate Currency = Value in Quote Currency x Exchange Rate Applied</inlineHelpText>
        <label>Exchange Rate Applied</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Net_Total__c</fullName>
        <description>Subtotal - Discount Value</description>
        <inlineHelpText>Subtotal - Discount Value</inlineHelpText>
        <label>Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Number_Of_Terms__c</fullName>
        <description>Leave this blank for &quot;Evergreen Subscriptions&quot; i.e., those that don&apos;t expire</description>
        <inlineHelpText>Leave this blank for &quot;Evergreen Subscriptions&quot; i.e., those that don&apos;t expire</inlineHelpText>
        <label>Terms (Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Override_Vat_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If user enable this checkbox, it will not populate VAT/Tax</description>
        <inlineHelpText>If user enable this check box, it will not populate VAT/Tax</inlineHelpText>
        <label>Override Vat/Tax ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the Partner who places this Quote on behalf of the Client</description>
        <inlineHelpText>Select the Partner who places this Quote on behalf of the Client</inlineHelpText>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes (Partner)</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Proposed_End_Date__c</fullName>
        <description>End Date proposed by the User</description>
        <inlineHelpText>This value will auto populate the Order Service End Date and override other settings</inlineHelpText>
        <label>Proposed End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Proposed_Start_Date__c</fullName>
        <description>Starting Date proposed by the user</description>
        <inlineHelpText>This value will auto populate the Order Service Start Date and override other settings</inlineHelpText>
        <label>Proposed Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Quote_Currency_Symbol__c</fullName>
        <description>Holds the Currency Symbol for all the charges</description>
        <formula>invoiceit_s__CurrencyL__r.invoiceit_s__Currency_Symbol__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field holds the Symbol for all the charges</inlineHelpText>
        <label>Currency Symbol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It tells the Parent Quote from which the Quote is cloned</description>
        <inlineHelpText>This field  will auto populates  when ever Quote is cloned.</inlineHelpText>
        <label>Parent Quote</label>
        <referenceTo>invoiceit_s__Quote__c</referenceTo>
        <relationshipLabel>Cloned Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Recalculate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Calculates the Total Contract Value</description>
        <inlineHelpText>This field will auto calculate the Total Contract Value once if it is enabled</inlineHelpText>
        <label>Recalculate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Renewed_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewed From</label>
        <referenceTo>invoiceit_s__Job__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Shipping_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Delivers the product to the customer</description>
        <inlineHelpText>This field represents for whom to Deliver the Product</inlineHelpText>
        <label>Primary(Shipping) Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.invoiceit_s__Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.invoiceit_s__Account__c</valueField>
            </filterItems>
            <infoMessage>You can pick a contact that belongs to the selected Account or Partner. This can be overridden.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quote (Shipping Contact)</relationshipLabel>
        <relationshipName>Quote1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Service Activation Date</description>
        <inlineHelpText>This field is used as Service Activation Date for that particular charge</inlineHelpText>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Status__c</fullName>
        <description>Based on the status user will check the Quote is Active/Converted  or not</description>
        <inlineHelpText>This field is used to check the status for the Quote if it is Active/Converted/Cancelled/Expired
based on that the Quote will be generated.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Sub_Total__c</fullName>
        <description>Quantity * Unit Price</description>
        <inlineHelpText>Quantity * Unit Price</inlineHelpText>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Sync_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the value is true then it copies the products from Quote to an Opportunity.</description>
        <inlineHelpText>When checked, the products from the Quote record will be synchronized to the related Opportunity record.</inlineHelpText>
        <label>Sync Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Tax__c</fullName>
        <description>Populate the Tax  for the particular charges related to Quote</description>
        <inlineHelpText>This field will auto populate if this rate is a Tax  for the particular charge</inlineHelpText>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Todays_MRR__c</fullName>
        <label>Obsolete_Today&apos;s MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__TotalProfitPercent__c</fullName>
        <description>(Grand Total - Total Cost) 
----------------------------------   x  100
          Grand Total</description>
        <inlineHelpText>(Grand Total - Total Cost) 
----------------------------------   x  100
          Grand Total</inlineHelpText>
        <label>Total Profit Percent</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Total_Contract_Value__c</fullName>
        <description>This field will auto populate based on Terms(Months) field</description>
        <inlineHelpText>This field will auto populate based on Terms(Months) field</inlineHelpText>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Total_Cost__c</fullName>
        <description>Quantity*Unit Cost</description>
        <inlineHelpText>Quantity*Unit Cost</inlineHelpText>
        <label>Total Cost Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Total_Profit_Percent__c</fullName>
        <label>Obsolete Total Profit Percent</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Total_Profit__c</fullName>
        <description>Calculated based on the Grand Total</description>
        <inlineHelpText>This field will auto populate based on the Grand Total value</inlineHelpText>
        <label>Total Profit (Excl Tax/VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Total_Quote_Products__c</fullName>
        <description>This field represents how many products involved for that Quote</description>
        <inlineHelpText>This field represents how many products involved for that Quote</inlineHelpText>
        <label>Total Quote Products</label>
        <summaryForeignKey>invoiceit_s__Quote_Product__c.invoiceit_s__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Total__c</fullName>
        <description>Subtotal - Discount + VAT + Tax</description>
        <inlineHelpText>Subtotal - Discount + VAT + Tax</inlineHelpText>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__VAT__c</fullName>
        <description>Populate the VAT for the particular charges related to Quote</description>
        <inlineHelpText>This field will auto populate if this rate is a VAT for the particular charge</inlineHelpText>
        <label>VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Valid_To__c</fullName>
        <description>Service End Date</description>
        <inlineHelpText>This field is used as Service End Date for that particular charge</inlineHelpText>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Quote</label>
    <listViews>
        <fullName>invoiceit_s__All</fullName>
        <columns>NAME</columns>
        <columns>invoiceit_s__Account__c</columns>
        <columns>invoiceit_s__Shipping_Contact__c</columns>
        <columns>invoiceit_s__Status__c</columns>
        <columns>invoiceit_s__Total__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Quotes</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>